bug on mobile scrolling fixxed

--- a/static-html-directory/style.css
+++ b/static-html-directory/style.css
@@ -477,10 +477,33 @@ h3::first-letter {
     #panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:130px;}
 }
 @media screen and (max-width : 1000px ){
-      #panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:180px;}
-  .col_footer_20 {
- display: none;
- width: 0%;
+
+/* Caption text */
+.text {
+    background-color: rgba(4,23,37,0.6);
+    color: #e3f3ff;
+    font-size: 25px;
+    padding: 30px 70px;
+    position: absolute;
+    top: 20%;
+    height:200px;
+    width: 100%;
+    text-align: center;
+      }
+
+/* Number text (1/3 etc) */
+.date {
+    font-family:"Impact";
+    font-size: 35px;
+    padding: 50px 50px;
+    position: absolute;
+    top: 0;
+}
+
+#panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:180px;}
+.col_footer_20 {
+    display: none;
+    width: 0%;
     margin-top:0px;
 }
 .col_footer_50 {
@@ -488,14 +511,6 @@ h3::first-letter {
  width: 100%;
  margin-top:0px;
  height: 110px;
-}
-
-.col_footer_100 {
- display: inline-block;
- width: 100%;
- height:10px;
- background-color:#041725;
- color:white;
 }
 
  .col_footer_60 {
@@ -543,28 +558,6 @@ h3::first-letter {
 	background-position:center center;
     }
 
-
-/* Caption text */
-.text {
-    background-color: rgba(4,23,37,0.6);
-    color: #e3f3ff;
-    font-size: 20px;
-    padding: 30px 70px;
-    position: absolute;
-    top: 100px;
-    height:200px;
-    width: 100%;
-    text-align: center;
-      }
-
-/* Number text (1/3 etc) */
-.date {
-    font-family:"Impact";
-    font-size: 35px;
-    padding: 50px 100px;
-    position: absolute;
-    top: 0;
-}
 }
 
 @media screen and (max-width : 700px ){ 
@@ -579,8 +572,11 @@ h3::first-letter {
   html ::-webkit-scrollbar {
     display: none;
   }
+
+  .col_30{width:100%}
+  #panel_superc .container{height:200% !important }
+}
   #panel_aree .content h1{text-align: center;font-size:18px; font-weight: 300;line-height: 1.4; height:70px;
-			     
 }
     .column {
 	width: 100%;
