--- a/static-html-directory/style_eventi.css
+++ b/static-html-directory/style_eventi.css
@@ -658,6 +658,17 @@ h4 span::first-letter {
 
 
 @media screen and (max-width : 1000px ){  
+ html {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    max-width: 100vw !important;
+    overflow: hidden !important;
+    overflow-y: auto !important;
+  }
+  html ::-webkit-scrollbar {
+    display: none;
+  }
 
     .content p{
 	font-size: 30px;
